# readtext

./: README.md  build.sh  justfile  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  helper.rs  image_cache.rs  lib.rs  main.rs  markdown_parse.rs
src/component/: ActivityBar.tsx  Icons.tsx  MarkdownEditor.tsx  imageComponent.tsx  mainWindow.tsx  markdownRender.tsx  settingsPanel.tsx  sidebar.tsx  statusBar.tsx  tableOfContent.tsx  titleBar.tsx
src/component/panels/: ExplorerPanel.tsx  OutlinePanel.tsx  SearchPanel.tsx  SettingsPanel.tsx
src/components/: Icons.tsx
src/context/: ImageContext.tsx
src/features/editor/: index.ts
src/features/editor/components/: ImageComponent.tsx  MarkdownEditor.tsx  MarkdownRenderer.tsx
src/features/editor/components/MarkdownRenderer/: MarkdownContent.tsx  index.tsx
src/features/editor/hooks/: useAutoSave.ts  useMarkdownParser.ts  useMouseFontSize.ts  useZoom.ts
src/features/editor/styles/: editor.css  image.css
src/features/editor/types/: index.ts
src/features/editor/utils/: domHelpers.ts  regex.ts
src/features/explorer/: index.ts
src/features/explorer/components/: ExplorerPanel.tsx
src/features/explorer/hooks/: useFileSystem.ts
src/features/explorer/styles/: explorer.css
src/features/layout/: index.ts
src/features/layout/components/: ActivityBar.tsx  MainWindow.tsx  Sidebar.tsx  TitleBar.tsx
src/features/layout/hooks/: useTabs.ts
src/features/layout/styles/: layout.css
src/features/outline/: index.ts
src/features/outline/components/: OutlinePanel.tsx
src/features/outline/styles/: outline.css
src/features/settings/: index.ts
src/features/settings/components/: SettingsPanel.tsx
src/features/settings/hooks/: useConfig.ts
src/hook/: useTheme.ts  useVim.ts
src/hooks/: useAppInit.ts  useConfig.ts  useFileSystem.ts  useTabs.ts  useTheme.ts
src/styles/: activitybar.css  markdown.css  panels.css  print.css  settings.css  sidebar.css  theme.css  titleBar.css
src/types/: index.ts
src/utils/: constants.ts
