[package]
name = "readtext"
version = "0.1.0"
description = "Markdown preview application"
authors = ["mintori"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "readtext_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8.2.0"
gtk = "0.18.2"
walkdir = "2.5.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
pulldown-cmark = "0.13.0"
regex = "1.12.3"
parking_lot = "0.12"
tokio = { version = "1", features = ["fs"] }
serde_yaml = "0.9.34"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"

[profile.release.package.wry]
debug = true
debug-assertions = true
